codama-macros/tests/node_attribute/unrecognized_node.fail.stderr
error: unrecognized node
 --> tests/node_attribute/unrecognized_node.fail.rs:3:15
  |
3 | #[codama(node(unrecognized_node(foo = 42)))]
  |               ^^^^^^^^^^^^^^^^^
